Source/WebCore/page/Navigator.cpp
@@ -115,8 +115,8 @@ bool Navigator::cookieEnabled() const
 {
     if (!m_frame)
         return false;
-        
-    if (m_frame->page() && !m_frame->page()->cookieEnabled())
+
+    if (m_frame->page() && !m_frame->page()->settings()->cookieEnabled())
         return false;
 
     return cookiesEnabled(m_frame->document());
